feature: [149] Update implementation of MQTT session lifecycle, part 3 (#155)
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>