@@ -33,6 +33,7 @@ configurations.each {
 
 bootRun {
   mainClass = "javasabr.mqtt.broker.application.MqttBrokerApplication"
+  jvmArgs += "--enable-preview"
 }
 
 bootJar {
